# ac-hmm-satellites

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  VALIDATION.md  instructions.txt  requirements_lock.txt  setup.py  setup_env.sh  verify_tables.ps1  verify_tables.sh
manifests/: t2t_chm13_alpha.json
paper/: AC_HMM_SATELLITES.md  reference_tables.json
src/: bindings.cpp  trellis.cpp  trellis.hpp
src/python/achmm/: __init__.py  baselines.py  encoding.py  model.py  trellis_numpy.py
tools/: build_spatial_track.py  compare_to_reference.py  compute_spatial_ess.py  fetch_t2t_sequence.py  verify_audit_ledger.py
